style: align button and roadmap items and add styling

--- a/src/components/RoadmapItem/RoadmapItem.css
+++ b/src/components/RoadmapItem/RoadmapItem.css
@@ -1,3 +1,10 @@
 #roadmap-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  flex-direction: column;
   border: 1px solid black;
+  height: 120px;
+  width: 120px;
 }
