--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,7 +1,7 @@
 #button{
     display: inline-block;
     text-decoration: none;
-    background: #169d8c;
+    background: lightgrey;
     color: #FFF;
     width: 120px;
     height: 120px;
@@ -14,7 +14,7 @@
     vertical-align: middle;
     overflow: hidden;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
-    border-bottom: solid 3px #169d8c;
+    border-bottom: solid 3px lightgrey;
     transition: .4s;
     outline: none;
 }
@@ -23,7 +23,7 @@
     -ms-transform: translateY(2px);
     -webkit-transform: translateY(2px);
     transform: translateY(2px);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 1px rgba(255, 246, 246, 0.15);
     border-bottom: none;
 
 }
