--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -8,7 +8,7 @@
 }
 
 .search-container input {
-	width: 100%;
+	width: 50%;
 	padding: 16px;
 	font-size: 36px;
 	font-style: italic;
@@ -16,8 +16,18 @@
 	box-sizing: border-box;
 	outline: none;
 }
+
+.search-label {
+  display: flex;
+  justify-content: center;
+}
 .search-icon {
 	font-size: 24px;
 	color: #555;
 	right: 18px;
+}
+
+#icon-container {
+  display: flex;
+  align-items: center;
 }
