--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -31,3 +31,12 @@
   display: flex;
   align-items: center;
 }
+
+.results-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  width: 100%;
+}
