--- a/src/containers/MainDashboard/MainDashboard.css
+++ b/src/containers/MainDashboard/MainDashboard.css
@@ -10,7 +10,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   width: 100%;
 }
 
