--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -7,11 +7,22 @@ form {
 
 input {
   height: 3rem;
-  width: 90%;
+  width: 75%;
   border-radius: 3px;
   padding: 0px 1.5rem;
 }
 
 input:not(last-of-type) {
   margin-bottom: 3rem;
+}
+
+.submit {
+  width: 60%;
+  padding: 1rem 1.5rem;
+  background-color: rgb(32, 226, 129);
+  border-radius: 5px;
+  font-family: 'Comfortaa';
+  font-size: 1.15rem;
+  color: #FFF;
+  box-shadow: -5px 6px 6px rgba(0, 0, 0, .15);
 }
