--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -10,18 +10,19 @@
   height: 90vh;
   background-image: url('./../../assets/sharon-mccutcheon-eMP4sYPJ9x0-unsplash.jpg');
   background-size: cover;
-  font-family: 'Comfortaa';
 }
 
 .LISU__wrapper {
   display: inline-flex;
+  padding-bottom: 3rem;
   flex-direction: column;
-  width: 25rem;
-  height: 28rem;
+  width: 27rem;
   position: absolute;
   left: 10vw;
   top: 20vh;
-  /* background-color: #c0c0c057; */
+  background-color: #adb7c3;
+  border-radius: 10px;
+  box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
 }
 
 .form__header {
@@ -31,10 +32,10 @@
   align-self: center;
   background-color: #FFF;
   border-radius: 5px;
-  box-shadow: 0px 2px 3px rgba(128, 62, 62, 0.2);
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 
-.form__header>div {
+.form__header>button {
   height: 3.5rem;
   width: 50%;
   display: flex;
@@ -42,30 +43,31 @@
   align-items: center;
   font-size: 1.25rem;
   background-color: #e0e0e073;
+  font-family: 'Comfortaa';
 }
 
-.form__header>div:first-of-type {
+.form__header>button:first-of-type {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 
-.form__header>div:not(:first-of-type) {
+.form__header>button:not(:first-of-type) {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
 
-.form__header>div>p {
+.form__header>button>p {
   display: inline-block;
 }
 
-.form__header>div.selected {
+.form__header>button.selected {
   background-color: rgba(72, 142, 248, 0.822);
   box-shadow: 0px -20px 50px rgba(0, 0, 0, .25) inset;
   border-bottom: 4px solid rgba(0, 0, 0, 0.315);
   border-top: 1px solid #cecccc9c;
 }
 
-.form__header>div:not(.selected) {
+.form__header>button:not(.selected) {
   background-color: #FFF;
   border-top: 4px solid rgba(139, 139, 139, 0.123);
   border-bottom: 1px solid #cecccc9c;
