--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,6 +4,10 @@ img {
 
 .navbar-container {
   height: 12vh;
+  width: 100%;
+  background-color: #FFF;
+  position: fixed;
+  z-index: 100;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, .25), 0px -25px 60px rgba(0, 0, 0, .15) inset;
 }
 
@@ -29,7 +33,13 @@ img {
   width: 15%;
 }
 
-.user-info__avatar>img {
+.user-info__avatar a {
+  height: 100%;
+  display: block;
+}
+
+.user-info__avatar>a>img {
+  height: 100%;
   border-radius: 100px;
   border: 2px solid orange;
 }
@@ -49,5 +59,5 @@ img {
 }
 
 .navbar__nav__item:not(:last-of-type)>a {
-  padding-right: 1rem;
+  padding-right: 3rem;
 }
