--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -57,6 +57,7 @@
   box-shadow: 0px -20px 50px rgba(0, 0, 0, .25) inset;
   border-bottom: 4px solid rgba(0, 0, 0, 0.315);
   border-top: 1px solid #cecccc9c;
+  color: #FFF;
 }
 
 .form__header>button:not(.selected) {
