--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,11 @@ ol, ul {
   list-style: none;
 }
 
+button, input {
+  border: none;
+  outline: none;
+}
+
 ::placeholder {
   font-family: 'Comfortaa';
   font-size: 1rem;
