--- a/src/components/AuthForm/AuthForm.css
+++ b/src/components/AuthForm/AuthForm.css
@@ -1,18 +1,18 @@
-form {
+#login-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 3rem;
 }
 
-input {
+#login-form input {
   height: 3rem;
   width: 75%;
   border-radius: 3px;
   padding: 0px 1.5rem;
 }
 
-input:not(last-of-type) {
+#login-form input:not(last-of-type) {
   margin-bottom: 3rem;
 }
 
