--- a/src/components/RoadmapItemForm/RoadmapItemForm.css
+++ b/src/components/RoadmapItemForm/RoadmapItemForm.css
@@ -1,41 +1,60 @@
 #roadmap-form {
-  display: flex;
-  justify-content: center;
+   display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  margin-top: 20px;
   flex-direction: column;
-  border: 1px solid black;
-  height: 120px;
-  width: 120px;
+  margin-bottom: 30px;
+  text-align: center;
+  background-color: #fff;
+  box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
+  height: 450px;
+  font-size: 25px;
+  font-family: comfortaa;
+  color: #201E45;
+  width: 18%;
+  text-decoration: none;
 }
 
 #roadmap-form input {
-  width: 80%;
-  margin-top: 5px;
+  width: 50%;
+  height: 10%;
   border: 1px solid lightgray;
   outline: none;
+  font-size: 15px;
+  padding: 5px;
+  font-family: comfortaa;
+  box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
 }
 
 #roadmap-form select {
-  width: 80%;
-  margin-top: 5px;
+  width: 50%;
+  height: 10%;
   border: 1px solid lightgray;
   outline: none;
+  font-family: comfortaa;
+  font-size: 15px;
+  box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
 }
 
-#roadmap-form button{
+#roadmap-form button {
     text-decoration: none;
-    background: lightgray;
-    color: #FFF;
+    background: #fff;
+    color: #F07B7B;
     margin-top: 5px;
-    width: 40%;
-    height: 20%;
-    font-size: 10px;
+    width: 50%;
+    height: 10%;
+    font-size: 30px;
     text-align: center;
     font-weight: bold;
     outline: none;
+    box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
 }
 
-#roadmap-form button:active{
+#roadmap-form button:active {
     border-bottom: none;
+}
+
+#roadmap-form button:hover {
+  background:  #F07B7B;;
+  color: #fff;
 }
