--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-	margin: 36px auto;
+  padding-top: 12em;
 	width: 100%;
 	max-width: 800px;
 }
