--- a/src/components/RoadmapItemForm/RoadmapItemForm.css
+++ b/src/components/RoadmapItemForm/RoadmapItemForm.css
@@ -1,5 +1,5 @@
 #roadmap-form {
-   display: flex;
+  display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
@@ -37,41 +37,25 @@
 }
 
 #roadmap-form button {
-<<<<<<< HEAD
   text-decoration: none;
-  background: lightgray;
-  color: #FFF;
+  background: #fff;
+  color: #F07B7B;
   margin-top: 5px;
-  width: 40%;
-  height: 20%;
-  font-size: 10px;
+  width: 50%;
+  height: 10%;
+  font-size: 30px;
   text-align: center;
   font-weight: bold;
   outline: none;
+  box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
 }
 
 #roadmap-form button:active {
   border-bottom: none;
-=======
-    text-decoration: none;
-    background: #fff;
-    color: #F07B7B;
-    margin-top: 5px;
-    width: 50%;
-    height: 10%;
-    font-size: 30px;
-    text-align: center;
-    font-weight: bold;
-    outline: none;
-    box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
-}
-
-#roadmap-form button:active {
-    border-bottom: none;
 }
 
 #roadmap-form button:hover {
-  background:  #F07B7B;;
+  background: #F07B7B;
+  ;
   color: #fff;
->>>>>>> 3e79dfc915eea3b2ebe62ca31897abc7c91c0592
 }
