--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -1,20 +1,31 @@
+.discover-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 7em;
+  padding-left: 2em;
+  padding-right: 2em;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
 .search-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 12em;
+  padding-top: 4em;
 	width: 100%;
-	max-width: 800px;
 }
 
 .search-container input {
 	width: 50%;
-	padding: 16px;
-	font-size: 36px;
-	font-style: italic;
 	color: #444;
 	box-sizing: border-box;
-	outline: none;
+  outline: none;
+  font-size: 20px;
+  padding: 30px;
+  font-family: comfortaa;
+  background-color: #E4E4EF;
+  border-bottom: 1px solid #444;
 }
 
 .search-label {
@@ -30,13 +41,4 @@
 #icon-container {
   display: flex;
   align-items: center;
-}
-
-.results-container {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: flex-start;
-  width: 100%;
 }
