--- a/src/containers/MainDashboard/MainDashboard.css
+++ b/src/containers/MainDashboard/MainDashboard.css
@@ -4,7 +4,9 @@
   padding-top: 12em;
   padding-left: 2em;
   padding-right: 2em;
-  justify-content: space-evenly;
+  margin-left: 15px;
+  margin-right: 15px;
+  justify-content: space-around;
   width: 100%;
 }
 
