--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,22 +1,22 @@
 #button{
-    display: inline-block;
     text-decoration: none;
-    background: lightgrey;
+    background-color: #F07b7b;
     color: #FFF;
-    width: 120px;
-    height: 120px;
-    margin-top: 50px;
-    line-height: 120px;
     border-radius: 50%;
     text-align: center;
-    font-size: 20px;
-    font-weight: bold;
-    vertical-align: middle;
-    overflow: hidden;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
-    border-bottom: solid 3px lightgrey;
-    transition: .4s;
+    width: 40px;
+    height: 40px;
+    font-family: comfortaa;
+    font-size: 28px;
+    font-weight: 600;
     outline: none;
+    transition: transform 1s;
+}
+
+#button:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
 
 #btn:active{
