--- a/src/containers/MainDashboard/MainDashboard.css
+++ b/src/containers/MainDashboard/MainDashboard.css
@@ -1,3 +1,8 @@
+h1 span {
+  font-weight: 900;
+  color: #F07B7B;
+}
+
 .container {
   display: flex;
   padding-top: 10rem;
@@ -16,6 +21,9 @@
 }
 
 #middle {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
   padding-top: 40%;
   align-self: center;
   flex-grow: 1;
@@ -24,6 +32,22 @@
 #delete-x {
   display: none;
   cursor: pointer;
+}
+
+.discover-more-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 2rem;
+  padding-top: 14rem;
+}
+
+.add-roadmap-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 8rem;
+  padding-right: 2em;
 }
 
 .roadmap-container {
@@ -52,4 +76,31 @@
 
 .roadmap-container:hover #delete-x {
   display: block;
+}
+
+.background {
+  height: 100vh;
+  background-image: url('./../../assets/background-discover-2.jpg');
+  background-position: bottom center;
+  background-size: cover;
+}
+
+#add-roadmap-button {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 2rem;
+  padding-right: 14rem;
+}
+
+.arrow-icon {
+  font-size: 30px;
+  margin-left: 1em;
+  transition: transform 0.5s;
+  color: #F07B7B;
+}
+
+.arrow-icon:hover {
+  -webkit-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
 }
