--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -1,8 +1,8 @@
 .LISU__container {
   height: 100%;
-  background-image: url('../../assets/4.jpg');
+  background-image: url('./../../assets/background-auth.jpg');
   background-size: cover;
-  background-position: 50% 50%;
+  background-position: 50% 20%;
 }
 
 .LISU__wrapper {
@@ -68,4 +68,20 @@
 
 form input:hover {
   outline: 2px solid #7177e7;
+}
+
+#auth-heading {
+  padding-top: 14rem;
+  padding-left: 8rem;
+  font-size: 30px;
+}
+
+#auth-heading h2 {
+  padding-top: 1rem;
+  padding-left: 0.5em;
+  font-size: 20px;
+}
+
+#auth-heading span {
+  color:  #F07B7B;
 }
