--- a/src/containers/MainDashboard/MainDashboard.css
+++ b/src/containers/MainDashboard/MainDashboard.css
@@ -16,7 +16,6 @@ h1 span {
   padding-right: 2em;
   margin-left: 15px;
   margin-right: 15px;
-  justify-content: space-around;
   width: 100%;
 }
 
@@ -59,14 +58,17 @@ h1 span {
   justify-content: center;
   flex-direction: column;
   margin-bottom: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
   text-align: center;
   background-color: #fff;
+  border: 3px solid #201E45;
   box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
-  height: 450px;
+  height: 350px;
+  width: 350px;
   font-size: 25px;
   font-family: comfortaa;
   color: #201E45;
-  width: 450px;
   text-decoration: none;
   transition: transform 1s;
 }
@@ -76,6 +78,7 @@ h1 span {
   -ms-transform: scale(1.1);
   transform: scale(1.1);
   color: #F07B7B;
+  border: 3px solid #F07B7B;
 }
 
 .roadmap-container:hover #delete-x {
