--- a/src/components/Linkbar/Linkbar.css
+++ b/src/components/Linkbar/Linkbar.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  overflow: hidden;
-  align-items: flex-start;
   width: 100%;
+  height: 100%;
   padding-top: 80px;
+  margin-bottom: 20px;
 }
 
 #linkbar-container button {
@@ -16,21 +16,21 @@
   font-weight: 400;
   font-family: comfortaa;
   text-decoration: none;
-  height: 100%;
-  width: 8%;
+  height: 70px;
+  width: 140px;
+  margin-right: 5px;
+  margin-top: 20px;
   padding: 20px;
 }
 
 #linkbar-container button:hover {
   color: #fff;
-  font-weight: 800;
+  font-weight: 900;
   text-decoration: none;
 }
 
 #linkbar-category {
-  display: block;
   color: #686f7a;
   font-size: 13px;
   font-weight: 300;
-  padding: 12px 16px;
 }
