--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 4em;
+  padding-top: 2em;
 	width: 100%;
 }
 
@@ -24,7 +24,7 @@
   font-size: 20px;
   padding: 30px;
   font-family: comfortaa;
-  background-color: #E4E4EF;
+  background-color: #FFFFFF;
   border-bottom: 1px solid #444;
 }
 
