--- a/src/containers/MainDashboard/MainDashboard.css
+++ b/src/containers/MainDashboard/MainDashboard.css
@@ -1,8 +1,3 @@
-#roadmap-list-heading {
-  padding-top: 14rem;
-  padding-left: 8rem;
-}
-
 h1 span {
   font-weight: 900;
   color: #F07B7B;
@@ -11,11 +6,8 @@ h1 span {
 .container {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 6em;
-  padding-left: 2em;
-  padding-right: 2em;
-  margin-left: 15px;
-  margin-right: 15px;
+  justify-content: center;
+  padding-top: 14em;
   width: 100%;
 }
 
