--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,17 @@ ol, ul {
   list-style: none;
 }
 
+button {
+  background-color: transparent;
+}
+
 button, input {
   border: none;
   outline: none;
+}
+
+textarea {
+  resize: none;
 }
 
 ::placeholder {
