--- a/src/components/Topic/Topic.css
+++ b/src/components/Topic/Topic.css
@@ -1,5 +1,123 @@
 .topic-container {
-  border: 1px solid black;
   width: 15%;
   margin: 0 2%;
+  height: 60%;
+  background-color: #E4E4EF;
+  border-radius: 3px;
+  transition: box-shadow .2s ease-out;
+  position: relative;
+}
+
+.topic-container:hover {
+  cursor: pointer;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, .2);
+}
+
+.topic-container:hover .delete-button {
+  opacity: 1;
+}
+
+.topic-container::before {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border: 2px solid transparent;
+  border-radius: 3px;
+}
+
+.topic-container:hover::before {
+  animation: animateBefore .75s ease-in forwards;
+}
+
+.topic-container::after {
+  content: '';
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border: 2px solid transparent;
+  border-radius: 3px;
+}
+
+.topic-container:hover::after {
+  animation: animateAfter .75s ease-out forwards;
+}
+
+.topic-content {
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.delete-button {
+  opacity: 0;
+  transition: opacity .25s;
+  position: absolute;
+  top: -7px;
+  right: 0px;
+  z-index: 5;
+}
+
+.delete-button:hover {
+  cursor: pointer
+}
+
+@keyframes animateBefore {
+  0% {
+    width: 0;
+    height: 0;
+    border-top-color: #4042676c;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-right-color: transparent;
+  }
+  50% {
+    width: 100%;
+    height: 0;
+    border-top-color: #4042676c;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-right-color: #4042676c;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    border-top-color: #4042676c;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    border-right-color: #4042676c;
+  }
+}
+
+@keyframes animateAfter {
+  0% {
+    width: 0;
+    height: 0;
+    border-top-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: #4042676c;
+    border-right-color: transparent;
+  }
+  50% {
+    width: 0;
+    height: 100%;
+    border-top-color: transparent;
+    border-bottom-color: #4042676c;
+    border-left-color: #4042676c;
+    border-right-color: transparent;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    border-top-color: transparent;
+    border-bottom-color: #4042676c;
+    border-left-color: #4042676c;
+    border-right-color: transparent
+  }
 }
