--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,56 +1,8 @@
-.navbar-container {
-  height: 10vh;
-  width: 100%;
-  background-color: #E4E4EF;
-  position: fixed;
-  z-index: 100;
-}
-
-.navbar-content {
-  height: 100%;
-  padding: 0px 2rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 85%;
-  margin: 0 auto;
-  font-size: 1.25rem;
-  font-family: 'Comfortaa'
-}
-
-.navbar__nav, .navbar__nav__item {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.user-info__container {
-  display: flex;
-  align-content: center;
-  width: 30%;
-}
-
-
-.user-info__user-name {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding-left: 40px;
-}
-
-.user-info__user-name p {
-  padding-bottom: 3px;
-}
-
-.navbar__nav__container {
-  display: flex;
-  align-items: center;
-}
-
-.navbar__nav__item a {
+.main-nav a {
   position: relative;
 }
 
-.navbar__nav__item a:after {
+.main-nav a:after {
   content: '';
   display: block;
   border-bottom: 2px solid #F07B7B;
@@ -63,14 +15,96 @@
   z-index: 10;
 }
 
-.navbar__nav__item a:hover::after {
+.main-nav a:hover::after {
   width: 100%;
 }
 
-.navbar__nav__item:not(:last-of-type)>a {
+.main-nav :not(:last-of-type)>a {
   margin-right: 2.3rem;
 }
 
-#logo {
-  padding-right: 10px;
+.navbar {
+  font-size: 18px;
+  background-color: #E4E4EF;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 10px;
+}
+
+.main-nav {
+  display: flex;
+  list-style-type: none;
+}
+
+.left {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+}
+
+.logo {
+  text-decoration: none;
+}
+
+.main-nav li {
+  text-align: center;
+  margin: 5px auto;
+}
+
+.logo {
+  font-size: 22px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.active {
+  display: block;
+}
+
+@media screen and (min-width: 615px) and (max-width: 768px) {
+  #welcome {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 0;
+    height: 70px;
+    align-items: center;
+  }
+
+  .main-nav {
+    display: flex;
+    margin-right: 30px;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 65%;
+  }
+
+  .left {
+    width: 35%;
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .main-nav li {
+    margin: 0;
+  }
+
+  .nav-links {
+    margin-left: 40px;
+  }
+
+  .logo {
+    margin-top: 0;
+    padding-right: 20px;
+  }
+
+
+  .logo:hover,
+  .nav-links:hover {
+    color: rgba(255, 255, 255, 1);
+  }
 }
