--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -1,4 +1,9 @@
 .LISU__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   height: 100%;
   background-image: url('./../../assets/background-auth.jpg');
   background-size: cover;
@@ -10,9 +15,6 @@
   padding-bottom: 3rem;
   flex-direction: column;
   width: 27rem;
-  position: absolute;
-  right: 40%;
-  top: 25%;
   background-color: rgba(228, 228, 239, 0.575);
   border-left: 1px solid #E4E4EF;
   border-right: 1px solid #E4E4EF;
@@ -71,9 +73,10 @@ form input:hover {
 }
 
 #auth-heading {
-  padding-top: 14rem;
-  padding-left: 8rem;
   font-size: 30px;
+  padding-bottom: 20px;
+  align-self: flex-start;
+  padding-left: 120px;
 }
 
 #auth-heading h2 {
@@ -84,4 +87,17 @@ form input:hover {
 
 #auth-heading span {
   color:  #F07B7B;
+}
+
+@media screen and (max-width: 1500px) {
+  .LISU__wrapper {
+    display: block;
+    margin: 0 auto;
+  }
+  #auth-heading {
+  font-size: 30px;
+  padding-bottom: 20px;
+  align-self: flex-start;
+  padding-left: 120px;
+}
 }
