--- a/src/components/RoadmapList/RoadmapList.css
+++ b/src/components/RoadmapList/RoadmapList.css
@@ -26,3 +26,25 @@
   color: #F07B7B;
   font-size: 20px;
 }
+
+/* FADE IN ANYMATION */
+
+/* make keyframes that tell the start state and the end state of our object */
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:3; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:3; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity: 3; } }
+
+.fade-in {
+  opacity:0;
+  -webkit-animation:fadeIn ease-in 0.7;
+  -moz-animation:fadeIn ease-in 0.7;
+  animation:fadeIn ease-in 0.7;
+
+  -webkit-animation-fill-mode:forwards;
+  -moz-animation-fill-mode:forwards;
+  animation-fill-mode:forwards;
+
+  -webkit-animation-duration:0.7s;
+  -moz-animation-duration:0.7s;
+  animation-duration:0.7s;
+}
