--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -24,7 +24,7 @@
   font-size: 20px;
   padding: 30px;
   font-family: comfortaa;
-  background-color: #FFFFFF;
+  background-color: transparent;
   border-bottom: 1px solid #444;
 }
 
