fix: change units to pixel for padding and margin

--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -14,7 +14,7 @@
   display: inline-flex;
   padding-bottom: 3rem;
   flex-direction: column;
-  width: 27rem;
+  width: 400px;
   background-color: rgba(228, 228, 239, 0.575);
   border-left: 1px solid #E4E4EF;
   border-right: 1px solid #E4E4EF;
