--- a/src/containers/MainDashboard/MainDashboard.css
+++ b/src/containers/MainDashboard/MainDashboard.css
@@ -7,7 +7,7 @@ h1 span {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 14em;
+  padding-top: 150px;
   width: 100%;
 }
 
