--- a/src/components/RoadmapList/RoadmapList.css
+++ b/src/components/RoadmapList/RoadmapList.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 6em;
+  padding-top: 50px;
   padding-left: 3em;
   padding-right: 3em;
   margin-left: 15px;
