--- a/src/containers/Discover/Discover.css
+++ b/src/containers/Discover/Discover.css
@@ -1,7 +1,7 @@
 .discover-container {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 7em;
+  padding-top: 5px;
   padding-left: 2em;
   padding-right: 2em;
   justify-content: space-evenly;
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 2em;
+  padding-top: 30px;
 	width: 100%;
 }
 
