--- a/src/components/RoadmapList/RoadmapList.css
+++ b/src/components/RoadmapList/RoadmapList.css
@@ -27,6 +27,35 @@
   font-size: 20px;
 }
 
+#load-more-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+#load-more-button button {
+    color: #fff;
+    border: 1px solid #201E45;
+    border-radius: 5px;
+    background-color: #201E45;
+    font-weight: 400;
+    font-size: 15px;
+    font-family: comfortaa;
+    text-decoration: none;
+    height: 70px;
+    width: 140px;
+    margin-right: 5px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+#load-more-button button:hover {
+  background-color: #F07B7B;
+  border: 1px solid #F07B7B;
+}
+
 /* FADE IN ANYMATION */
 
 /* make keyframes that tell the start state and the end state of our object */
