--- a/src/components/TopicDetails/TopicDetails.css
+++ b/src/components/TopicDetails/TopicDetails.css
@@ -1,8 +1,7 @@
 .topic-details-card {
   display: inline-flex;
   flex-direction: column;
-  width: 30vw;
-  height: 100%;
+  width: 30%;
   justify-content: center;
 }
 
@@ -30,8 +29,9 @@
   overflow: hidden;
   border: none;
   padding: .75rem;
+  border-radius: 5px;
 }
 
 .block textarea:nth-of-type(3) {
-  border-radius: 8px;
+  border-radius: none;
 }
