--- a/src/components/TopicsRow/TopicsRow.css
+++ b/src/components/TopicsRow/TopicsRow.css
@@ -1,18 +1,12 @@
 .topics-row-container {
   background-color: #FFF;
-  width: 50vw;
-  height: 100px;
+  height: 8rem;
   position: relative;
-  border-top: 1px solid #4042671f;
   border-radius: 3px;
 }
 
 .topics-row-container:hover {
-  box-shadow: 0px 3px 4px rgba(0, 0, 0, .25);
-}
-
-.topics-row-container:first-of-type {
-  margin-top: 3rem;
+  background-color: rgb(250, 250, 250);
 }
 
 .topics-row-container:not(:last-of-type) {
@@ -25,6 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid #E4E4EF;
 }
 
 .topics-row-container:hover .add-topic__btn {
