--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url('./../../assets/background-auth.jpg');
   background-size: cover;
   background-position: 50% 20%;
@@ -21,9 +21,6 @@
   border-bottom: 1px solid #E4E4EF;
   border-radius: 10px;
   box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
 }
 
 .form__header {
@@ -80,8 +77,6 @@ form input:hover {
   padding-bottom: 20px;
   align-self: flex-start;
   padding-left: 120px;
-  position: absolute;
-  top: 17.5%;
 }
 
 #auth-heading h2 {
@@ -91,7 +86,7 @@ form input:hover {
 }
 
 #auth-heading span {
-  color: #F07B7B;
+  color:  #F07B7B;
 }
 
 @media screen and (max-width: 1500px) {
@@ -100,9 +95,9 @@ form input:hover {
     margin: 0 auto;
   }
   #auth-heading {
-    font-size: 30px;
-    padding-bottom: 20px;
-    align-self: flex-start;
-    padding-left: 120px;
+  font-size: 30px;
+  padding-bottom: 20px;
+  align-self: flex-start;
+  padding-left: 120px;
   }
 }
