--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-html, body {
+body {
   height: 100%;
-  background-color: #fbfbfb;
+  background-color: #fff;
   font-family: comfortaa;
   background-image: radial-gradient(#e4e4ef 1px, transparent 1px), radial-gradient(#e4e4ef 1px, transparent 1px);
+  background-position: 0 0, 25px 25px;
+  background-size: 50px 50px
 }
 
 html {
