--- a/src/containers/RoadmapDashboard/RoadmapDashboard.css
+++ b/src/containers/RoadmapDashboard/RoadmapDashboard.css
@@ -2,6 +2,7 @@
   background-image: url('./../../assets/roadmaptree.png');
   background-attachment: fixed;
   background-size: cover;
+  min-height: 600px;
 }
 
 .roadmap-tree-container {
