--- a/src/index.css
+++ b/src/index.css
@@ -52,12 +52,18 @@ button {
   background-color: transparent;
 }
 
+input {
+  font-size: 0.9rem;
+}
+
 button, input, textarea {
   border: none;
   outline: none;
 }
 
 textarea {
+  font-size: 1rem;
+  font-family: 'Comfortaa';
   resize: none;
   background: rgba(240, 240, 240, 0.719);
 }
@@ -83,4 +89,8 @@ textarea {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   background-color: rgb(212, 212, 212);
+}
+
+.mde-preview, .mde-preview-content, .mde-preview-content>p {
+  word-break: break-all;
 }
