--- a/src/components/Checklist/Checklist.css
+++ b/src/components/Checklist/Checklist.css
@@ -7,8 +7,8 @@
   background: rgba(240, 240, 240, 0.719);
   border: 1px solid #4042616c;
   border-radius: 3px;
-  padding: .5rem;
-  margin: 1rem 1rem 1rem 0px;
+  padding: 8px;
+  margin: 16px 16px 16px 0px;
 }
 
 .big-input {
