--- a/src/components/RoadmapList/RoadmapList.css
+++ b/src/components/RoadmapList/RoadmapList.css
@@ -2,9 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding-top: 50px;
-  padding-left: 3em;
-  padding-right: 3em;
+  padding: 50px 50px 0 50px;
   margin-left: 15px;
   margin-right: 15px;
   width: 100%;
