--- a/src/components/TopicsRow/TopicsRow.css
+++ b/src/components/TopicsRow/TopicsRow.css
@@ -1,6 +1,6 @@
 .topics-row-container {
   background-color: #FFF;
-  height: 8rem;
+  height: 128px;
   position: relative;
   border-radius: 3px;
 }
@@ -10,7 +10,7 @@
 }
 
 .topics-row-container:not(:last-of-type) {
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
 .topics-container {
@@ -27,7 +27,7 @@
 }
 
 .add-topic__btn {
-  font-size: 1.5rem;
+  font-size: 24px;
   position: absolute;
   left: 7.5px;
   top: 7.5px;
@@ -46,7 +46,7 @@
 .AT-label {
   display: none;
   position: absolute;
-  top: 1rem;
-  left: 3rem;
-  font-size: .8rem;
+  top: 16px;
+  left: 48px;
+  font-size: 12px;
 }
