--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -12,7 +12,7 @@
 
 .LISU__wrapper {
   display: inline-flex;
-  padding-bottom: 3rem;
+  padding-bottom: 48px;
   flex-direction: column;
   width: 400px;
   background-color: rgba(228, 228, 239, 0.575);
@@ -36,12 +36,12 @@
 }
 
 .form__header>button {
-  height: 3.5rem;
+  height: 56px;
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.25rem;
+  font-size: 20px;
   font-family: 'Comfortaa';
 }
 
@@ -81,8 +81,8 @@ form input:hover {
 }
 
 #auth-heading h2 {
-  padding-top: 1rem;
-  padding-left: 0.5em;
+  padding-top: 16px;
+  padding-left: 8px;
   font-size: 20px;
 }
 
@@ -91,7 +91,7 @@ form input:hover {
 }
 
 .login__selector {
-  height: 4rem;
+  height: 64px;
   background-color: #FFF;
 }
 
