--- a/src/components/TopicDetails/TopicDetails.css
+++ b/src/components/TopicDetails/TopicDetails.css
@@ -11,12 +11,12 @@
 }
 
 .block {
-  margin-bottom: 3rem;
+  margin-bottom: 48px;
   display: flex;
   justify-content: center;
 }
 
-.title-block__wrapper, .description-block__wrapper, .resources-block__wrapper {
+.title-block-wrapper, .description-block-wrapper, .resources-block-wrapper {
   display: inline-flex;
   flex-direction: column;
   width: 80%;
@@ -38,7 +38,7 @@
   padding: 12px;
 }
 
-.resources-block__wrapper.block textarea {
+.resources-block-wrapper.block textarea {
   border: none;
   border-radius: 0
 }
@@ -47,7 +47,7 @@
   border-radius: none;
 }
 
-.save__container {
+.save-container {
   width: 20%;
   margin: 0 auto;
   text-align: center;
@@ -58,11 +58,11 @@
   transition: border-color .35s, border-radius .35s;
 }
 
-.save__container:hover {
+.save-container:hover {
   border: 1px solid rgb(185, 185, 185);
 }
 
-.save__container>button {
+.save-container>button {
   width: 100%;
   height: 100%;
   padding: 12px 4px;
@@ -71,16 +71,16 @@
   transition: color .25s;
 }
 
-.save__container>button:hover {
+.save-container>button:hover {
   cursor: pointer;
   color: #E4E4EF;
 }
 
-.checklist__container {
+.checklist-container {
   display: flex;
   justify-content: center;
 }
 
-.checklist__container h3 {
+.checklist-container h3 {
   display: inline;
 }
