--- a/src/containers/Authentication/Authentication.css
+++ b/src/containers/Authentication/Authentication.css
@@ -1,4 +1,4 @@
-.LISU__container {
+.authentication-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,7 +10,7 @@
   background-position: 50% 20%;
 }
 
-.LISU__wrapper {
+.form-wrapper {
   display: inline-flex;
   padding-bottom: 48px;
   flex-direction: column;
@@ -23,11 +23,11 @@
   box-shadow: -2px 4px 5px rgba(0, 0, 0, .2);
 }
 
-.LISU__wrapper button {
+.form-wrapper button {
   cursor: pointer;
 }
 
-.form__header {
+.form-header {
   width: 100%;
   display: flex;
   align-self: center;
@@ -35,7 +35,7 @@
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
 }
 
-.form__header>button {
+.form-header>button {
   height: 56px;
   width: 50%;
   display: flex;
@@ -45,27 +45,27 @@
   font-family: 'Comfortaa';
 }
 
-.form__header>button:first-of-type {
+.form-header>button:first-of-type {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 
-.form__header>button:not(:first-of-type) {
+.form-header>button:not(:first-of-type) {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
 
-.form__header>button>p {
+.form-header>button>p {
   display: inline-block;
 }
 
-.form__header>button.selected {
+.form-header>button.selected {
   background-color: #E4E4EF;
   box-shadow: 0px -20px 50px rgba(0, 0, 0, .25) inset;
   color: #FFF;
 }
 
-.form__header>button:not(.selected) {
+.form-header>button:not(.selected) {
   background-color: #FFF;
 }
 
@@ -90,13 +90,13 @@ form input:hover {
   color: #F07B7B;
 }
 
-.login__selector {
+.login-selector {
   height: 64px;
   background-color: #FFF;
 }
 
 @media screen and (max-width: 1500px) {
-  .LISU__wrapper {
+  .form-wrapper {
     display: block;
     margin: 0 auto;
   }
