--- a/src/containers/RoadmapTree/RoadmapTree.css
+++ b/src/containers/RoadmapTree/RoadmapTree.css
@@ -1,4 +1,4 @@
-.copy__container {
+.copy-container {
   height: 40px;
   background-color: #404267;
   margin-bottom: 8px;
@@ -6,12 +6,12 @@
   box-shadow: 0px 3px 5px rgba(0, 0, 0, .25), 0px -20px 30px rgba(0, 0, 0, .35) inset;
 }
 
-.copy__container:hover {
+.copy-container:hover {
   cursor: pointer;
   background-color: #4e507a;
 }
 
-.copy__btn {
+.copy-btn {
   width: 100%;
   color: #FFF;
   height: 100%;
@@ -20,11 +20,11 @@
   justify-content: center;
 }
 
-.copy__btn:hover {
+.copy-btn:hover {
   cursor: pointer;
 }
 
-.copy__label {
+.copy-label {
   display: inline-flex;
   align-items: center;
   padding-left: 16px;
@@ -34,33 +34,33 @@
   font-size: 24px;
 }
 
-.copy-roadmap:hover, .add-row__btn:hover {
+.copy-roadmap:hover, .add-row-btn:hover {
   cursor: pointer;
 }
 
-.add-row__btn svg {
+.add-row-btn svg {
   color: #404267;
   font-size: 24px;
 }
 
-.add-row__btn {
+.add-row-btn {
   margin-left: 7px;
 }
 
-.ARlabel {
+.add-row-label {
   display: none;
   width: 112px;
   font-size: 12px;
   margin-left: 8px;
 }
 
-.add-row__btn:hover+.ARlabel {
+.add-row-btn:hover+.ARlabel {
   display: block;
   position: absolute;
   bottom: -25px;
 }
 
-.AR__container {
+.add-row-container {
   width: 20%;
 }
 
